请求后台数据post方式

--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -581,6 +581,7 @@
                             page: {
                                 curr: 1
                             }
+                            ,method:"post"
                             ,where: {filter:JSON.stringify(formSearch.api.getFormJson("form#search_form"))},
                         }
                     );
