--- a/application/admin/view/order/task_add.html
+++ b/application/admin/view/order/task_add.html
@@ -586,7 +586,7 @@
                                                             </ul>
                                                             <!--<br>-->
                                                             <!--<p class="marginbuttom5"></p>-->
-                                                            <textarea placeholder="请输入内容" class="layui-textarea yty-textarea sms-content" id="sms-content">亲爱的收货人，您已下单成功，付款前请勿相信不法分子冒充我司客服用电话或旺旺QQ实施的行骗行为，有问题可联系客服哦~</textarea>
+                                                            <textarea placeholder="请输入内容" class="layui-textarea yty-textarea sms-content" id="sms-content">注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
                                                             <p class="font12">已输入：<span class="red_color sms-content-length">62</span> 字(包含签名) 当前计费：<span class="red_color">1</span>条 <span class="astyle tips-icon font14" title-icon="1、单条70个字,超出70个字将按照67个字每条计算<br>
 2、一个汉字,数字,字母,空格都算一个字<br>
 3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！">计费规则(重要)</span></p>
